--- a/README.gmi
+++ b/README.gmi
@@ -5,4 +5,4 @@ A nginx module to add a proof-of-work challenge before accessing a page.
 In your nginx configuration file, add 'powshield "on";' to a server or a location.
 The proof of work protection can also be disabled using 'powshield "off";'.
 
-=>img/img.webp
+=>img/img.webp Demo
